[package]
name = "activity-oracle-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility"
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4"
csv = {version = "1.4.0"}
